# pipnode-zigbee-plugin

./: .gitignore  LICENSE  Makefile.am  README.md  TODO  TODO.md  autogen.sh  configure.ac  run-tests.sh
.github/: FUNDING.yml
data/icons/: README.md
debian/: changelog  control  copyright  pipnode-zigbee-plugin.install  rules
examples/: Makefile.am
examples/zigbee/: first.json  leak-sensor.json  mqtt.json  zigbee-button.json  zigbee-remote-leds.json  zigbee-staircase.json  zigbee-two-plugs.json
src/: Makefile.am  pn-zigbee-button.c  pn-zigbee-button.h  pn-zigbee-gui.c  pn-zigbee-name-registry.c  pn-zigbee-name-registry.h  pn-zigbee-node-gui.c  pn-zigbee-node-gui.h  pn-zigbee-permit-join.c  pn-zigbee-permit-join.h  pn-zigbee-plugin.c  pn-zigbee-relay-command.c  pn-zigbee-relay-command.h  pn-zigbee-relay-status.c  pn-zigbee-relay-status.h  pn-zigbee-remote.c  pn-zigbee-remote.h  pn-zigbee-sink.c  pn-zigbee-sink.h  pn-zigbee-source.c  pn-zigbee-source.h  pn-zigbee-switch.c  pn-zigbee-switch.h  pn-zigbee-water-leak.c  pn-zigbee-water-leak.h  pn-znp-ping.c  pn-znp-ping.h
src/help/: PnZigbeeButton.html  PnZigbeePermitJoin.html  PnZigbeeRelayCommand.html  PnZigbeeRelayStatus.html  PnZigbeeRemote.html  PnZigbeeSink.html  PnZigbeeSource.html  PnZigbeeSwitch.html  PnZigbeeWaterLeak.html  PnZnpPing.html
tests/: pn-test.c  pn-test.h  test-zigbee-name-registry.c  test-zigbee-permit-join.c  test-zigbee-relay-command.c  test-zigbee-relay-status.c  test-zigbee-remote.c  test-zigbee-sink.c  test-zigbee-source.c  test-zigbee-switch.c  test-zigbee-water-leak.c  test-znp-ping.c
