# Example worksheets, installed into the host's shared examples tree
# ($(PIPNODE_EXAMPLESDIR), derived from pipnode-core.pc's datadir) under
# a "zigbee" category sub-directory, so the editor's Examples menu lists
# them alongside the host's bundled samples.  The dist_ prefix also
# ships them in `make dist`.  None yet; add entries here as worksheets
# are written.
zigbeedir = $(PIPNODE_EXAMPLESDIR)/zigbee
dist_zigbee_DATA = \
	zigbee/first.json
